# ochre

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: .gitignore  monitor_emails.py  notify_inbound.py  sync_emails.py  sync_github.py  sync_repo_stats.py  sync_slack.py  talk_to_your_pdfs.py
ochre/: __init__.py  __main__.py  component.py  constants.py  core.py  exceptions.py  job.py  misc.py
ochre/executors/: base.py  simple.py
tests/: test_apply.py  test_encode_decode.py  test_merkle_tree_algorithm.py
